--- a/src/App.css
+++ b/src/App.css
@@ -7,11 +7,43 @@
 /*<-------- Layout --------->*/
 
 /* Container */
+.container {
+  display: flex;
+  flex-direction: column;
+  gap: 32px;
+}
 
 /* Kpi cards */
 .kpi-cards {
   display: flex;
   gap: 36px;
+}
+
+.charts-row {
+  display: flex;
+  gap: 36px;
+}
+
+.revenue-chart-container,
+.budget-chart-container {
+  padding: 20px;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.08);
+  border-radius: 4px;
+}
+.revenue-chart-container {
+  width: 670px;
+  height: 500px;
+}
+
+.revenue-chart,
+.budget-chart {
+  width: 100%;
+  height: 100%;
+}
+
+.budget-chart-container {
+  width: 440px;
+  height: 500px;
 }
 
 /*<-------- Components --------->*/
