--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,10 @@
-* {
+#root {
   font-family: indivisible, sans-serif;
   font-style: normal;
   box-sizing: border-box;
+  color: #333333;
+  background-color: #f9f9f9;
+  min-height: 100dvh;
 }
 
 /*<-------- Layout --------->*/
@@ -10,7 +13,18 @@
 .container {
   display: flex;
   flex-direction: column;
-  gap: 32px;
+  gap: 36px;
+  align-items: center;
+}
+
+.flex-col {
+  display: flex;
+  flex-direction: column;
+  gap: 36px;
+}
+.flex-row {
+  display: flex;
+  gap: 36px;
 }
 
 /* Kpi cards */
@@ -26,12 +40,13 @@
 
 .revenue-chart-container,
 .budget-chart-container {
+  background-color: #ffffff;
   padding: 20px;
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.08);
   border-radius: 4px;
 }
 .revenue-chart-container {
-  width: 670px;
+  width: 644px;
   height: 500px;
 }
 
@@ -42,27 +57,36 @@
 }
 
 .budget-chart-container {
-  width: 440px;
+  width: 406px;
   height: 500px;
+}
+
+.mood-card-col {
+  display: flex;
+  flex-direction: column;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.08);
+  padding: 20px;
+  background-color: #ffffff;
 }
 
 /*<-------- Components --------->*/
 
 /*  KPI Card */
 .kpi-card {
-  width: 200px;
-  height: 160px;
+  width: 184px;
+  height: 136px;
   border-radius: 4px;
-  color: #333333;
-  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.08);
+  box-shadow: 0px 8px 8px rgba(0, 0, 0, 0.08);
   display: flex;
   flex-direction: column;
   align-items: center;
   padding: 10px;
   gap: 5px;
+  background-color: #ffffff;
 }
 
 .delayed {
+  color: #ffffff;
   background-color: #fb7f8c;
 }
 
@@ -79,5 +103,55 @@
 .kpi-card .title {
   font-size: 16px;
   line-height: 24px;
-  font-weight: medium;
+  font-weight: 500;
+}
+
+/* mood card */
+.mood-card {
+  background-color: #ffffff;
+  width: 200px;
+  padding: 20px 0px;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+.mood-card::after {
+  border-bottom: 1px solid #ebebeb;
+  bottom: 0;
+  content: "";
+  display: block;
+  height: 1px;
+  left: 50%;
+  position: absolute;
+  transform: translate(-50%, 0);
+  width: 100%;
+}
+
+.mood-card .user {
+  display: flex;
+  gap: 10px;
+  align-items: center;
+}
+
+.mood-card .pic {
+  width: 56px;
+  height: 56px;
+  flex-shrink: 0;
+}
+
+.mood-card .pic img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
+
+.mood-card .user .details {
+  display: flex;
+  flex-direction: column;
+  gap: 4px;
+}
+.mood-card .user .details .role {
+  color: #bebebe;
+  font-size: 14px;
 }
